apps/mmr/base/overlay_artifacts/mmr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mmr-<REPLACE_WITH_MMR_HOMESERVER_STRIPPED>-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Host <REPLACE_WITH_MMR_HOMESERVER>;
spec:
  rules:
    - host: synapse.<REPLACE_WITH_MMR_HOMESERVER>
      http:
        paths:
          - path: /_matrix/media
            pathType: Prefix
            backend:
              service:
                name: mmr
                port:
                  # example using port number
                  number: 8000
